# osm-data-model-tools

./: .clang-tidy  .ycm_extra_conf.py  CMakeLists.txt  README.md
.github/actions/install-ubuntu/: action.yml
.github/workflows/: ci.yml
doc/: characters.md  duplicate-segments.md  limits.md  line-or-polygon.md  mark-topo-nodes.md  remove-tags.md  tag-stats.md  way-nodes.md
src/: CMakeLists.txt  characters.cpp  duplicate-segments.cpp  filter.cpp  filter.hpp  limits.cpp  line-or-polygon.cpp  mark-topo-nodes.cpp  remove-tags.cpp  tag-stats.cpp  way-nodes.cpp
test/: CMakeLists.txt  line-or-polygon.sh
